# llm-zoomcamp-project

./: .gitignore  README.md  fcra_courses.txt  pyproject.toml  requirements.txt
notebooks/: 01.preprocessing.ipynb  01.preprocessing_embedding_rag.ipynb  02.create_ground_truth.ipynb  02.reused_embeded_data_rag.ipynb  03.loading_embeded_data_rag_and_evaluation.ipynb  cosine_similarity_results.csv  reuse_embeddings_and_query.ipynb
src/: app.py  app_2.py  txt_file_manipulation.py
